<resources>
    <string name="app_name">Deliver Buddy</string>
    <string name="menu">Menu</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="kfc">kfc</string>
    <string name="txt">TextViewTextViewTextViewTextViewTextViewTextViewTextView</string>
    <string name="time">9am - 7pm</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search ..</string>
    <string name="menus">Menus</string>
    <string name="personalises">personalises</string>
    <string name="la_saumon">la saumon</string>
    <string name="_20_50_le">20.50 LE</string>
    <string name="pear_orange"><![CDATA[Pear&Orange]]></string>
    <string name="_20_min">20 min</string>
    <string name="_4_8">4.8</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="moreTxt">TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView</string>
    <string name="game_elements">Game Elements</string>

    <string name="cart">Cart</string>
    <string name="desc">feb 23 th,at 6:30,feb 23 th,at 6:30</string>
    <string name="idr_36_000">idr 36.000</string>
    <string name="ayam_geperk">Ayam Geperk</string>
    <string name="discover">Discover</string>
    <string name="add_more_items">Add more items</string>
    <string name="checkout_2_45">Checkout $2.45</string>
    <string name="on_his_way">On His Way</string>
    <string name="_10_15_minutes">10 - 15 minutes</string>
    <string name="admin">Admin</string>
    <string name="order_history">Order History</string>
    <string name="ayam_geprek">ayam geprek</string>
    <string name="_1">1</string>
    <string name="ayam_geprek2">Ayam Geprek</string>
    <string name="pervios_level_4">pervios level 4</string>
    <string name="idr_20_000">idr 20.000</string>
    <string name="suptotal">Suptotal</string>
    <string name="tax">Tax</string>
    <string name="service_fee">Service fee</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="_45_000">45.000</string>
    <string name="_12_000">12.000</string>
    <string name="_8_000">8.000</string>

    <string name="total">Total</string>
    <string name="idr_48_000">idr 48.000</string>
    <string name="order_again">ORDER AGAIN</string>
    <string name="back">Back</string>
    <string name="my">My</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="my_adress">My Adress</string>
    <string name="_15_qetaa_alamria_alex_egypt">15 Qetaa alamria ,ALEX,Egypt</string>
    <string name="payment_method">Payment Method</string>
    <string name="card_ending_in_45215">Card ending in ******45215</string>
    <string name="help">Help</string>
    <string name="save_items">Save items</string>
    <string name="log_aut">Log aut</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="_128_48">$128.48</string>
    <string name="_0_02125231_btc">0.02125231 BTC</string>
    <string name="send_money">Send Money</string>
    <string name="to_bank">( To Bank )</string>
    <string name="requist_money">Requist Money</string>
    <string name="to_friends">To Friends</string>
    <string name="add_money">ADD MONEY</string>
    <string name="next_transfer_stars_from">Next Transfer stars from</string>
    <string name="_10_january_2018">10 january 2018</string>
    <string name="food">Food</string>
    <string name="_25_00">25.00 $</string>
    <string name="compo">Compo</string>
    <string name="sauces">Sauces</string>
    <string name="extras">Extras</string>
    <string name="dish">Dish</string>
    <string name="meal">Meal</string>
    <string name="food_menu">Food Menu</string>
    <string name="gaufres">Gaufres</string>
    <string name="fruits">Fruits</string>
    <string name="boissons">Boissons</string>
    <string name="pizza">pizza</string>
    <string name="magic_bottle">Magic Bottle</string>
    <string name="_0_89">$0.89</string>
    <string name="login">login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_with_your_email_address">Login with your email address</string>
    <string name="not_valid_email">Not Valid Email</string>
    <string name="not_valid_password">Not Valid Password</string>
</resources>